@@ -3,6 +3,7 @@ Version 2.1:
   [*] Fixed some tool tip text data.
   [-] Fixed a bug causing some configuration checkboxes not to be disabled if they should have to.
   [-] Fixed a bug causing no effect when pressing the Return or Escape button in some dialogs.
+  [-] Fixed a bug causing the notify icon to not being removed after the application closed.
 
 Verison 2.0 Revision 3:
   [-] Fixed a bug causing overlay texts to display wrong wallpaper names in some cases (related Bug-Tracker-ID: 3101135).
